--- a/package.json
+++ b/package.json
@@ -5,21 +5,18 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@types/node": "^14.14.37",
-    "bignumber.js": "^9.0.1",
-    "chai": "^4.3.4",
-    "eth-sig-util": "^3.0.1",
-    "ethers": "^5.3.0",
-    "node-fetch": "^2.6.1",
-    "tslib": "^2.1.0"
+    "bignumber.js": "^9.0.1"
   },
   "devDependencies": {
+    "@types/node": "^14.14.37",
     "@types/chai": "^4.2.16",
+    "chai": "^4.3.4",
     "@types/mocha": "^8.2.2",
     "babel-core": "^6.26.3",
     "babel-runtime": "^6.26.0",
     "chai-bignumber": "^3.0.0",
     "mocha": "^8.3.2",
+    "tslib": "^2.1.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.2.3"
   },
